--- a/src/components/AdminDash/UserTable/UserTable.module.css
+++ b/src/components/AdminDash/UserTable/UserTable.module.css
@@ -57,3 +57,21 @@
 .citySpan {
   width: 20%;
 }
+
+@media only screen and (max-width: 500px) {
+  .container {
+    font-size: 1em;
+  }
+  .emailSpan, .citySpan {
+    display: none;
+  }
+  .idSpan, .nameSpan {
+    width: auto;
+  }
+  .userDiv {
+    flex-wrap: wrap;
+  }
+  .userDivHeading {
+    font-size: 1em;
+  }
+}
