--- a/src/views/AdminDashboard/AdminDashboard.module.css
+++ b/src/views/AdminDashboard/AdminDashboard.module.css
@@ -11,3 +11,10 @@
   letter-spacing: 0.1em;
   border-bottom: solid 2px black;
 }
+
+@media only screen and (max-width: 500px) {
+  .heading {
+    margin-bottom: 0.5em;
+    font-size: 1.4em;
+  }
+}
